--- a/xerogGame/xerogGame.csproj
+++ b/xerogGame/xerogGame.csproj
@@ -75,11 +75,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Bullet.cs" />
     <Compile Include="Assets\Scripts\CharacterControllerScripts.cs" />
-    <Compile Include="Assets\Scripts\cameraFollowPlayer.cs" />
-    <Compile Include="Assets\Scripts\characterController.cs" />
+    <Compile Include="Assets\Scripts\Gun.cs" />
     <Compile Include="Assets\Scripts\initialize.cs" />
-    <Compile Include="Assets\Scripts\testing.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
