--- a/xerogGame/Assembly-CSharp.csproj
+++ b/xerogGame/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\cameraFollowPlayer.cs" />
      <Compile Include="Assets\Scripts\characterController.cs" />
      <Compile Include="Assets\Scripts\initialize.cs" />
+     <Compile Include="Assets\Scripts\moveXero.cs" />
      <Compile Include="Assets\Scripts\testing.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
