--- a/xerogGame/xerogGame.csproj
+++ b/xerogGame/xerogGame.csproj
@@ -75,6 +75,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Flipper.cs" />
+    <Compile Include="Assets\MoveTrail.cs" />
     <Compile Include="Assets\Scripts\ArmRotation.cs" />
     <Compile Include="Assets\Scripts\CharacterControllerScripts.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
