--- a/xerogGame/Assembly-CSharp.csproj
+++ b/xerogGame/Assembly-CSharp.csproj
@@ -50,10 +50,10 @@
      <Compile Include="Assets\Scripts\CharacterControllerScripts.cs" />
      <Compile Include="Assets\Scripts\MenuControl.cs" />
      <Compile Include="Assets\Scripts\Weapon.cs" />
-     <Compile Include="Assets\Scripts\bulletBeahviour.cs" />
      <Compile Include="Assets\Scripts\initialize.cs" />
      <Compile Include="Assets\Scripts\moveXero.cs" />
      <Compile Include="Assets\Scripts\playerHealth.cs" />
+     <Compile Include="Assets\Scripts\turretBulletBeahviour.cs" />
      <Compile Include="Assets\Scripts\turretFire.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
