--- a/xerogGame/Assembly-CSharp.csproj
+++ b/xerogGame/Assembly-CSharp.csproj
@@ -46,8 +46,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\EnemyAI.cs" />
+     <Compile Include="Assets\EnemyArmRotation.cs" />
+     <Compile Include="Assets\EnemyHealth.cs" />
+     <Compile Include="Assets\EnemyWeapon.cs" />
      <Compile Include="Assets\Scripts\ArmRotation.cs" />
      <Compile Include="Assets\Scripts\CharacterControllerScripts.cs" />
+     <Compile Include="Assets\Scripts\EnemyMovement.cs" />
      <Compile Include="Assets\Scripts\Flipper.cs" />
      <Compile Include="Assets\Scripts\MenuControl.cs" />
      <Compile Include="Assets\Scripts\MoveTrail.cs" />
