Improved bullet physics

--- a/xerogGame/xerogGame.csproj
+++ b/xerogGame/xerogGame.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Assets\Scripts\MenuControl.cs" />
     <Compile Include="Assets\Scripts\MoveTrail.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
+    <Compile Include="Assets\Scripts\cameraFollowPlayer.cs" />
+    <Compile Include="Assets\Scripts\enemyCounter.cs" />
     <Compile Include="Assets\Scripts\healthPackBehaviour.cs" />
     <Compile Include="Assets\Scripts\initialize.cs" />
     <Compile Include="Assets\Scripts\moveXero.cs" />
