commit to merge

--- a/xerogGame/xerogGame.csproj
+++ b/xerogGame/xerogGame.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Assets\Scripts\MoveTrail.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
     <Compile Include="Assets\Scripts\cameraFollowPlayer.cs" />
+    <Compile Include="Assets\Scripts\doorDetectionBehaviour.cs" />
     <Compile Include="Assets\Scripts\enemyCounter.cs" />
     <Compile Include="Assets\Scripts\healthPackBehaviour.cs" />
     <Compile Include="Assets\Scripts\initialize.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Assets\Scripts\turretBulletBeahviour.cs" />
     <Compile Include="Assets\Scripts\turretFire.cs" />
     <Compile Include="Assets\Scripts\turretHealth.cs" />
+    <Compile Include="Assets\loadNewLevel.cs" />
     <Compile Include="Assets\playerBulletBehaviour.cs" />
   </ItemGroup>
   <ItemGroup>
